css/basic.css
@import "compass/css3";

html, body {
	background-color: floralwhite;
}

#header {
	background-color: rgb(51, 51, 51);
    position: fixed;
    top: 0px;
    left: 0px; 
    width: 100%;
    height: 8vw;
    z-index: 1;
    white-space: nowrap;
}

#header > #title {
    font-family: "Courier new", monospace, serif;
    padding: 0.75vh 2vw;
    position: relative;
    color: floralwhite;
    display: inline-block;
    font-size: 4vw;
    clear: both;
    overflow: hidden;
}

#header > #title > .title2 {
    font-family: "Courier new", monospace, serif;
    padding: 0.75vh 2vw;
    position: relative;
    color: floralwhite;
    display: inline-block;
    font-size: 4vw;
    clear: both;
    overflow: hidden;
}


#header > #title > #links {
    list-style: none;
    display: inline-block;
    padding: 0.5vh 2.7vw;
    position: relative;
    font-size: 2.5vw;
}

ul#links li {
	display: inline-block;
}

ul#links li:hover {
	color: mediumseagreen;
}

#header > .icon img{
	padding: 1vw 0px 0px 2.5vw;
	max-width: 6%;
	position: relative;
	height: auto;
	float: left;
}

#select {
    top: 8vw;
	font-family: "Courier new", monospace, serif;
	display: inline-block;
	position: relative;
	color: red;
	font-size: 10vw
}

#select > #projects {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 0 auto;
    text-align: center;
    position: relative;
    align-items: center;
    justify-content: center;
	color: rgb(51, 51, 51);
	font-size: 2vw;
}

#select > #projects > .pic {
	flex: 1;
    display: inline-block;
    *display: inline;
}

#select > #projects > .text {
	padding-left: 25%;
	flex: 4;
	text-align: justify;
    display: inline-block;
    *display: inline;
    padding-right: 5%;
}

.proj {
	max-width: 270%;
}

#select > #about {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 0 auto;
    text-align: center;
    position: relative;
    align-items: center;
    justify-content: center;
	color: rgb(51, 51, 51);
	font-size: 2vw;
}

#select > #about > .pic {
	flex: 1;
    display: inline-block;
    *display: inline;
}

#select > #about > .text {
	padding-left: 25%;
	flex: 4;
	text-align: justify;
    display: inline-block;
    *display: inline;
    padding-right: 5%;
}

.balls {
	width: 270%;
}

#select > #contact {
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction: row;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 0 auto;
    text-align: center;
    position: relative;
    align-items: center;
    justify-content: center;
	color: rgb(51, 51, 51);
	font-size: 2vw;
    padding-bottom: 10%;
}

#select > #contact > .box1 {
    flex: 1;	
    display: inline-block;
    *display: inline;
}

#select > #contact > .box2 {
    flex: 1;	
    display: inline-block;
    *display: inline;
}

#select > #contact > .box3 {
    flex: 1;	
    display: inline-block;
    *display: inline;	
}

.stretch {
    width: 100%;
    display: inline-block;
    font-size: 0;
    line-height: 0;
}

.github {
    padding-top: 30%;
	width: 60%;
}

.email {
    padding-top: 30%;
	width: 60%;
}

.linkedin {
    padding-top: 30%;
	width: 60%;
}

.home {
    position: relative;
    width: 67%;
    padding-left: 13%;
}

